# bodega

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
.bodega/: .gitignore  bg-086c5b.md  bg-09357e.md  bg-0f30d1.md  bg-13ca29.md  bg-147f6e.md  bg-23b639.md  bg-2c40a5.md  bg-386435.md  bg-69a8a3.md  bg-7c06a6.md  bg-7ce5ec.md  bg-88b272.md  bg-92325e.md  bg-9872f8.md  bg-a7da36.md  bg-abc8c1.md  bg-b5f916.md  bg-c22fda.md  bg-c4be4d.md  bg-d375e2.md  bg-dd63e2.md  bg-e20ced.md  bg-e63b85.md  bg-ff9e2b.md  bodega-a7da36.md  config.yaml
.github/workflows/: build.yml  release.yml  test.yml
scripts/: .args
src/bodega/: __main__.py  cli.py  config.py  errors.py  graph.py  mcp_server.py  operations.py  output.py  storage.py  utils.py  worktree.py
src/bodega/commands/: __init__.py  create.py  deps.py  gc.py  howto.py  import_cmd.py  init.py  lifecycle.py  list_cmd.py  (+10 more)
tasks/: 00-index.md  01-project-setup.md  02-models.md  03-utils.md  04-config.md  05-storage.md  06-output.md  07-graph.md  08-cli-base.md  09-cmd-init.md  10-cmd-create.md  11-cmd-lifecycle.md  12-cmd-view.md  13-cmd-list.md  14-cmd-deps.md  15-cmd-migrate.md  16-test-fixtures.md
tests/: conftest.py  test_cli.py  test_cmd_create.py  test_cmd_deps.py  test_cmd_gc.py  test_cmd_import.py  test_cmd_init.py  test_cmd_lifecycle.py  test_cmd_list.py  test_cmd_migrate.py  test_cmd_order.py  test_cmd_push.py  test_cmd_reconcile.py  test_cmd_sync.py  test_cmd_transfer.py  test_cmd_view.py  test_config.py  test_graph.py  test_output.py  test_storage.py  test_ticket.py  test_utils.py  test_worktree.py
(+2 files in other folders)
