[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bodega"
dynamic = ["version"]
description = "Git-native issue tracking for developers and AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click==8.3.1",
    "pyyaml==6.0.3",
    "python-frontmatter==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

[project.scripts]
termnotes = "bodega.cli:main"

[tool.setuptools.dynamic]
version = {attr = "bodega.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"